# rust_chem

./: Cargo.toml  README.md
src/: main.rs
src/est/: mod.rs
src/gaussint/: gaussians.rs  mod.rs  primint.rs
